# sde-extraction

./: .dockerignore  .env.template  .gitignore  .mcp.json  ARCHITECTURE.md  CLAUDE.md  README.md  render.yaml
.project-intelligence/: README.md  agent-profile.json  instances.json  observatory-config.json  project-context.json
.project-intelligence/lessons-learned/: README.md
.project-intelligence/local-skills/: README.md
.project-intelligence/promotion-candidates/: README.md
.project-intelligence/sde-extraction-app/: agent-profile.json  attached-adapters.json  observatory-config.json  project-context.json  project-type.json
.project-intelligence/sde-extraction-dev/: agent-profile.json  attached-adapters.json  observatory-config.json  project-context.json  project-type.json
.project-intelligence/workflow-candidates/: README.md
Agent Drafts/: README.md  transformation-types-catalog.md
Agent Drafts/onboarding/: 2026-06-08-new-teammate-onboarding-agent-guide.md
Agent Drafts/sde-extraction-approach/: 2026-06-01-prior-art-and-pipeline.md  2026-06-05-dashboard-surface-specs.md  2026-06-05-document-architecture-canon.md  2026-06-12-doi-snapshot-schema.md  (+4 more)
Human validated/: README.md
apps/: README.md
research/: README.md
scripts/: README.md  architecture_diff.py  check_schema.py  requirements-spike.txt  spike_nvingest.py
services/: README.md
services/orchestration/: .gitignore  Dockerfile  README.md  dagster.yaml  pyproject.toml  workspace.yaml
services/orchestration/src/orchestration/defs/: pipeline.py
services/orchestration/tests/: test_oracle.py
(+178 files in other folders)
