[project]
name = "orchestration"
requires-python = ">=3.10,<3.15"
version = "0.1.0"
dependencies = [
    "dagster==1.13.10",
    "dagster-webserver==1.13.10",
    "dagster-postgres==0.29.10",
    "pydantic>=2",
    "pymupdf>=1.24",
    "numpy>=1.26",
]

[dependency-groups]
dev = [
    "dagster-dg-cli",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
force-include = { "pyproject.toml" = "pyproject.toml" }

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "orchestration"
registry_modules = [
    "orchestration.components.*",
]


